<resources>
    <!-- 基本信息 -->
    <string name="app_name">SChat Pro Mobile</string>
    <!-- 过去的页面 -->
    <string name="UsernameLabel">用户名：</string>
    <string name="passwordLabel">密码：</string>
    <string name="LoginButton">登录</string>
    <string name="ServerLabel">服务器：</string>
    <string name="ServerSetButtonLabel">设置</string>
    <string name="HomePageAbout">开发者:Xiaoxiaoyu1321</string>
    <string name="HomePageSettingButton">主要设置</string>
    <string name="title_activity_settings1">SettingsActivity1</string>

    <!-- 滚动列表名称 -->
    <string name="De_Chatroom">默认聊天室</string>
    <!-- Preference Titles -->
    <string name="messages_header">消息设置</string>
    <string name="sync_header">Sync</string>

    <!-- 默认聊天室 -->
    <string name="SendButtonLabel">发送</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- 用户设置 -->
    <string name="UserSettingLabel">用户设置</string>
    <string name="UserNameLabel">用户名</string>
    <string name="UserPasswordLabel">密码</string>
    <string name="ServerAddressLabel">服务器地址</string>
    <string name="ServerPortLabel">服务器端口</string>
    <string name="ServerAddressLabel_De">192.168.5.4</string>
    <string name="ServerPortLabel_De">19730</string>

    <!-- SChat 设置 -->
    <string name="SChat_Setting">SChat 设置</string>
    <string name="Are_You_SB">你是傻逼吗</string>
    <string name="Are_You_SB_ON">是这样的，你是一个傻逼</string>
    <string name="Are_You_SB_OFF">虽然你选择了你不是一个傻逼，但是你还是一个傻逼</string>
    <string name="Get_Message">消息通知</string>
    <string name="Get_Message_ON">您可能会接收到消息通知（由于各厂家的操作系统以及推送方式各不相同，您可能无法接收到消息通知）</string>
    <string name="Get_Message_OFF">您已禁用消息通知</string>
</resources>