<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/UserSettingLabel"
        app:key="userName">

        <EditTextPreference
            android:defaultValue="Default value"
            android:key="userName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/UserNameLabel"
            app:summary="设置你的用户名" />
        <EditTextPreference
            android:defaultValue="Default value"
            android:key="userPassword"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/UserPasswordLabel"
            app:summary="请保证你的密码安全" />
        <EditTextPreference
            android:defaultValue="@string/ServerAddressLabel_De"
            android:key="serverAddress"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/ServerAddressLabel"
            app:summary="设置要连接的服务器地址" />
        <EditTextPreference
            android:defaultValue="@string/ServerPortLabel_De"
            android:key="serverPort"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/ServerPortLabel"
            app:summary="设置要连接的服务器端口" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/SChat_Setting">

        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_preference_1"
            android:title="@string/Are_You_SB"
            app:summaryOff="@string/Are_You_SB_OFF"
            app:summaryOn="@string/Are_You_SB_ON" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Get_Message">

        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_preference_1"
            android:title="@string/Get_Message"
            app:summaryOff="@string/Get_Message_OFF"
            app:summaryOn="@string/Get_Message_ON" />
    </PreferenceCategory>

</PreferenceScreen>